--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "4    automatic   sedan       black     NaN  2019-04-02           28  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
    "source": [
     "# Reading csv file to create vehicles  dataframe\n",
     "# Enter YOUR file path in the vehicle_csv_path variable\n",
-    "vehicle_csv_path = '/Users/barrett22/Desktop/Sprint_4_Project/Sprint4Project/vehicles_us.csv'\n",
+    "vehicle_csv_path = '../vehicles_us.csv'\n",
     "vehicles_df = pd.read_csv(vehicle_csv_path)\n",
     "vehicles_df.head()"
    ]
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -307,106 +307,113 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13341</th>\n",
-       "      <td>8495</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>ford focus</td>\n",
-       "      <td>good</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>sedan</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2019-01-10</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26840</th>\n",
-       "      <td>2500</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>ram 1500</td>\n",
-       "      <td>good</td>\n",
+       "      <th>44955</th>\n",
+       "      <td>8650</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>buick enclave</td>\n",
+       "      <td>like new</td>\n",
        "      <td>6.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>195000.0</td>\n",
-       "      <td>manual</td>\n",
-       "      <td>truck</td>\n",
+       "      <td>128369.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>SUV</td>\n",
        "      <td>silver</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2019-01-15</td>\n",
-       "      <td>78</td>\n",
+       "      <td>2018-11-04</td>\n",
+       "      <td>95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40828</th>\n",
-       "      <td>3795</td>\n",
-       "      <td>2005.0</td>\n",
-       "      <td>honda odyssey</td>\n",
-       "      <td>excellent</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>168594.0</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>mini-van</td>\n",
-       "      <td>grey</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2018-10-23</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13643</th>\n",
-       "      <td>40000</td>\n",
-       "      <td>1970.0</td>\n",
-       "      <td>dodge charger</td>\n",
+       "      <th>19270</th>\n",
+       "      <td>13999</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>ford f250</td>\n",
        "      <td>excellent</td>\n",
        "      <td>8.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>83890.0</td>\n",
+       "      <td>126478.0</td>\n",
        "      <td>automatic</td>\n",
-       "      <td>coupe</td>\n",
-       "      <td>orange</td>\n",
+       "      <td>convertible</td>\n",
+       "      <td>white</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2018-11-07</td>\n",
-       "      <td>128</td>\n",
+       "      <td>2018-08-14</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32986</th>\n",
-       "      <td>11900</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>toyota camry</td>\n",
+       "      <th>49616</th>\n",
+       "      <td>5100</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>chevrolet impala</td>\n",
        "      <td>excellent</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>44708.0</td>\n",
+       "      <td>76000.0</td>\n",
        "      <td>automatic</td>\n",
        "      <td>sedan</td>\n",
-       "      <td>grey</td>\n",
+       "      <td>blue</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2019-03-24</td>\n",
-       "      <td>19</td>\n",
+       "      <td>2019-03-02</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49970</th>\n",
+       "      <td>9450</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>honda accord</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>57451.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-04-07</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10896</th>\n",
+       "      <td>900</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>nissan versa</td>\n",
+       "      <td>fair</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>135000.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>black</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2018-09-14</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       price  model_year          model  condition  cylinders fuel  odometer  \\\n",
-       "13341   8495      2014.0     ford focus       good        4.0  gas       NaN   \n",
-       "26840   2500      2006.0       ram 1500       good        6.0  gas  195000.0   \n",
-       "40828   3795      2005.0  honda odyssey  excellent        6.0  gas  168594.0   \n",
-       "13643  40000      1970.0  dodge charger  excellent        8.0  gas   83890.0   \n",
-       "32986  11900      2014.0   toyota camry  excellent        4.0  gas   44708.0   \n",
+       "       price  model_year             model  condition  cylinders fuel  \\\n",
+       "44955   8650      2012.0     buick enclave   like new        6.0  gas   \n",
+       "19270  13999      2010.0         ford f250  excellent        8.0  gas   \n",
+       "49616   5100      2006.0  chevrolet impala  excellent        6.0  gas   \n",
+       "49970   9450      2009.0      honda accord  excellent        6.0  gas   \n",
+       "10896    900      2012.0      nissan versa       fair        4.0  gas   \n",
        "\n",
-       "      transmission      type paint_color  is_4wd date_posted  days_listed  \n",
-       "13341    automatic     sedan         NaN     0.0  2019-01-10           13  \n",
-       "26840       manual     truck      silver     0.0  2019-01-15           78  \n",
-       "40828    automatic  mini-van        grey     0.0  2018-10-23           28  \n",
-       "13643    automatic     coupe      orange     0.0  2018-11-07          128  \n",
-       "32986    automatic     sedan        grey     0.0  2019-03-24           19  "
+       "       odometer transmission         type paint_color  is_4wd date_posted  \\\n",
+       "44955  128369.0    automatic          SUV      silver     0.0  2018-11-04   \n",
+       "19270  126478.0    automatic  convertible       white     0.0  2018-08-14   \n",
+       "49616   76000.0    automatic        sedan        blue     0.0  2019-03-02   \n",
+       "49970   57451.0    automatic        sedan        blue     0.0  2019-04-07   \n",
+       "10896  135000.0    automatic        sedan       black     0.0  2018-09-14   \n",
+       "\n",
+       "       days_listed  \n",
+       "44955           95  \n",
+       "19270           34  \n",
+       "49616            9  \n",
+       "49970           63  \n",
+       "10896           34  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2761,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2844,7 +2851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
